<resources>
    <string name="app_name">ShoppingCardAssignmentSystem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="card_assignment">Card Assignment</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="product_id">Product ID</string>
    <string name="submit">Submıt</string>
    <string name="remove">Remove</string>
    <string name="credit_card_limit">Credit Card Limit:</string>
    <string name="ip_address">IP Address</string>
    <string name="send">SEND</string>
    <string name="port_name">Port Name</string>
</resources>