<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductPriceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tvProductName"
        app:layout_constraintStart_toStartOf="@id/tvProductName"
        app:layout_constraintTop_toBottomOf="@id/tvProductName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/product_id"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tvProductName"
        app:layout_constraintStart_toStartOf="@id/tvProductName"
        app:layout_constraintTop_toBottomOf="@id/tvProductPriceName" />

</androidx.constraintlayout.widget.ConstraintLayout>