<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/blue"
    android:padding="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/myfont"
        android:hint="@string/product_id"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/myfont"
        android:hint="@string/product_name"
        android:inputType="text"
        android:maxLength="20"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tvProductId"
        app:layout_constraintStart_toStartOf="@id/tvProductId"
        app:layout_constraintTop_toBottomOf="@id/tvProductId" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/myfont"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tvProductId"
        app:layout_constraintStart_toStartOf="@id/tvProductId"
        app:layout_constraintTop_toBottomOf="@id/tvProductName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:drawableStart="@drawable/icon_delete"
        android:padding="2dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvProductPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>